Fix wrong font and word spacing in mobile Safari and Chrome

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@
 @layer base {
     html {
         @apply scroll-smooth;
+
+        font-family: Source Code Pro, monospace;
+        font-family: Source Serif Pro, serif;
+        font-family: Source Sans Pro, sans-serif;
     }
 
     body {
@@ -58,7 +62,7 @@
     }
 
     p {
-        text-align: justify;
+        @apply text-justify;
         hyphens: auto;
     }
 
